OverFlowing In X-Direcytion in Many Pages has Been Fixed

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
  
+body{
+  overflow-x: hidden;
+}
+
 i {
   color: #71717a;
 }
